# delinea-mcp

./: .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .goreleaser.yaml  .markdownlint.yaml  .snyk  .yamlfmt  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  aqua.yaml  config.json  config.json.example  delinea_api.py  install.sh  pyproject.toml  renovate.json  requirements.txt  server.py
.aqua/: aqua-checksums.json  aqua.yaml
.claude/: settings.local.json
.github/: CODEOWNERS  auto-assign.yml  copilot-instructions.md
.trunk/: trunk.yaml
delinea_mcp/: __init__.py  config.py  constants.py  session.py  tools.py  user_platform_tools.py
docs/: MCP standard info.md  PLAN.md  TODO_passthrough.md  chatgpt-connector.md  chatgpt_connector.md  claude-desktop.md  claude-remote-connector.md  claude_desktop.md  claude_remote_connector.md  mcp-standard-info.md  openwebui-admin.md  openwebui_admin.md  todo-passthrough.md  vscode-copilot.md  vscode_copilot.md
scripts/: manual_secret_request.py
tests/: test_api.py  test_as_config_additional.py  test_config_load.py  test_live.py  test_management.py  test_oauth.py  test_oauth_flow.py  test_oauth_routes_additional.py  test_redirect_uri_validation.py  test_register.py  test_reports.py  test_resources.py  test_run_server.py  test_search_fetch.py  test_search_fetch_extra.py  test_server_platform.py  test_sse_routes.py  test_sse_routes_additional.py  test_tools_additional.py  test_tools_errors.py  test_user_platform_tools.py  (+1 more)
(+12 files in other folders)
