[project]
name = "delinea-mcp"
version = "0.1.0"
description = "MCP server for the Delinea Secret Server and Platform APIs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "authlib==1.6.1",
  "fastapi==0.116.1",
  "httpx==0.28.1",
  "httpx-sse==0.4.1",
  "mcp[cli]==1.10.0",
  "openai==1.10.0",
  "pytest-asyncio==1.1.0",
  "requests==2.32.4",
  "uvicorn==0.35.0",
]
