[project]
name = "delinea-mcp"
version = "0.1.0"
description = "MCP server for the Delinea Secret Server and Platform APIs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "authlib>=1.6.4",
  "fastapi>=0.117.1",
  "httpx>=0.28.1",
  "httpx-sse>=0.4.1",
  "mcp>=1.10.0",
  "openai>=1.10.0",
  "requests>=2.32.4",
  "uvicorn>=0.35.0",
]

[dependency-groups]
dev = ["pytest>=8.4.2", "pytest-asyncio>=1.1.0", "coverage>=7.6.9"]
test = [
  "authlib>=1.6.4",
  "fastapi>=0.117.1",
  "httpx>=0.28.1",
  "httpx-sse>=0.4.1",
  "mcp>=1.10.0",
  "openai>=1.10.0",
  "pytest>=8.4.2",
  "pytest-asyncio>=1.1.0",
  "requests>=2.32.4",
]
